Update Transactions ListView
Update ActionBar
Update Transactions ListView

--- a/WalletAnalyzing/app/src/main/res/values/strings.xml
+++ b/WalletAnalyzing/app/src/main/res/values/strings.xml
@@ -103,4 +103,7 @@
     <string name="title_payee">Payee</string>
     <string name="title_event">Event</string>
 
+    <string name="content_expense">Expense</string>
+    <string name="content_income">Income</string>
+
 </resources>
