Update function show list Transactions
Transactions
Update class Currency, use enum and R.string

--- a/WalletAnalyzing/app/src/main/res/values-vn/strings.xml
+++ b/WalletAnalyzing/app/src/main/res/values-vn/strings.xml
@@ -79,5 +79,8 @@
 
     <string name="expense_category">Chi tiêu</string>
     <string name="expense_category_lent">Vay nợ</string>
+    <string name="content_today">Hôm nay</string>
+    <string name="content_yesterday">Hôm qua</string>
+    <string name="content_before_yesterday">Hôm kia</string>
 
 </resources>
