Update function Create/Update Transaction
Update function Create/Update Transaction

--- a/WalletAnalyzing/app/src/main/res/values-vn/strings.xml
+++ b/WalletAnalyzing/app/src/main/res/values-vn/strings.xml
@@ -82,5 +82,6 @@
     <string name="content_today">Hôm nay</string>
     <string name="content_yesterday">Hôm qua</string>
     <string name="content_before_yesterday">Hôm kia</string>
+    <string name="content_expensed">Đã chi: </string>
 
 </resources>
