--- a/WalletAnalyzing/app/src/main/res/values/strings.xml
+++ b/WalletAnalyzing/app/src/main/res/values/strings.xml
@@ -81,10 +81,10 @@
 
     <string name="Input_Error_Account_Name_Empty">Name can\'t be empty!</string>
     <string name="Input_Error_Amount_Empty">Amount can\'t be empty!</string>
-    <string name="Input_Error_TransferFee_Empty">Transfer Fee can\'t be empty!</string>
-    <string name="Input_Error_Category_Empty">Category can\'t be empty!</string>
     <string name="Input_Error_Account_Empty">Account can\'t be empty!</string>
     <string name="Input_Error_ToAccount_Empty">To Account can\'t be empty!</string>
+    <string name="Input_Error_Transfer_Same_Account">Cannot transfer in same Account!</string>
+    <string name="Input_Error_Adjustment_Same_Amount">Amount is 0!</string>
 
     <string name="expense_category">Expense Category</string>
     <string name="income_category">Income Category</string>
