--- a/WalletAnalyzing/app/src/main/res/values-vn/strings.xml
+++ b/WalletAnalyzing/app/src/main/res/values-vn/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Wallet Analyzing</string>
+    <string name="click_back_to_exist">Ấn thoát thêm lần nữa để thoát ứng dụng!</string>
 
     <string name="select_file_title">Select cert. file</string>
     <string name="serializable">Serializable</string>
@@ -36,6 +37,10 @@
     <string name="account_type_saving_deposit">Tài khoản tiết kiệm</string>
     <string name="account_type_other">Khác</string>
 
+    <string name="account_list_remain">Số tiền còn lại</string>
+    <string name="account_list_init_balance">Số tiền ban đầu</string>
+    <string name="account_list_balance">Còn: %s</string>
+
     <string name="account_add_name">Tên</string>
     <string name="account_add_name_hint">Tên tài khoản</string>
     <string name="account_add_type">Loai tài khoản</string>
@@ -69,6 +74,10 @@
     <string name="Input_Error_Transfer_Same_Account">Không thể chuyển khoản trong cùng tài khoản!</string>
     <string name="Input_Error_Adjustment_Same_Amount">Số tiền bằng 0!</string>
 
+    <string name="expense_category">Chi Tiêu</string>
+    <string name="income_category">Thu Vào</string>
+    <string name="expense_category_lent">Vay nợ</string>
+
     <string name="new_category_name">Tên</string>
     <string name="new_category_hint">Tên hạng mục</string>
     <string name="new_category_parent_category">Hạng mục cha</string>
@@ -82,12 +91,14 @@
     <string name="title_category_income_add">Thêm hạng mục thu</string>
     <string name="title_category_income_select_parent">Hạng mục cha</string>
 
-    <string name="expense_category">Chi tiêu</string>
-    <string name="expense_category_lent">Vay nợ</string>
+    <string name="content_expense">Chi: %s</string>
+    <string name="content_income">Thu: %s</string>
+    <string name="content_transfer">Transfer to </string>
     <string name="content_today">Hôm nay</string>
     <string name="content_yesterday">Hôm qua</string>
     <string name="content_before_yesterday">Hôm kia</string>
     <string name="content_expensed">Đã chi: %s</string>
     <string name="content_adjustment_income">Đã thu: %s</string>
+
 
 </resources>
