Report Expense vs Income : 100%
Rename a lot of things

--- a/WalletAnalyzing/app/src/main/res/values-vn/strings.xml
+++ b/WalletAnalyzing/app/src/main/res/values-vn/strings.xml
@@ -139,6 +139,8 @@
     <string name="title_description">Description</string>
     <string name="title_payee">Chi cho ai</string>
     <string name="title_event">Chuyến đi/Sự kiện</string>
+    <string name="title_report_evi_account">Tài Khoản</string>
+    <string name="title_report_evi_time">Thời Gian</string>
 
     <string name="Save">Ghi</string>
     <string name="Delete">Xóa</string>
